--- a/TwsPluginDemo/.classpath
+++ b/TwsPluginDemo/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="lib" path="D:/dm_workspace/TwsPluginDemo/linklib/TencentWearServiceLibApp.jar"/>
-	<classpathentry kind="lib" path="D:/dm_workspace/TwsPluginDemo/linklib/twspluginsharelib.jar"/>
+	<classpathentry kind="lib" path="linklib/twspluginsharelib.jar"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
