TwsPluginCore的完整输出【使用者想用TPF框架，只需要将twsplugincore.jar集成到工程里面就可以】

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@
 /TwsPluginHelloWorld/gen/*
 /TwsShareLib/bin/*
 /TwsShareLib/gen/*
-/TwsPluginCore/bin/*
+/TwsPluginCore/bin/classes
+/TwsPluginCore/bin/res
+/TwsPluginCore/bin/AndroidManifest.xml
+/TwsPluginCore/bin/R.txt
 /TwsPluginCore/gen/*
 /TwsPluginHost/bin/*
 /TwsPluginHost/gen/*
