--- a/TwsPluginHost/AndroidManifest.xml
+++ b/TwsPluginHost/AndroidManifest.xml
@@ -119,7 +119,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.tws.Second" >
-        <activity android:name=".ui.HostHomeActivity" >
+        <activity
+            android:name=".ui.HostHomeActivity"
+            android:theme="@style/Theme.tws.Second.Overlay" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -129,7 +131,7 @@
         <activity android:name=".ui.SettingsActivity" />
         <activity android:name=".ui.MessageManagerActivity" />
 
-                <!-- ============================Plugin配置============================ -->
+        <!-- ============================Plugin配置============================ -->
         <activity
             android:name=".plugindebug.DebugPluginActivity"
             android:screenOrientation="portrait" />
@@ -145,7 +147,7 @@
         <activity
             android:name=".plugindebug.PluginTwsFragmentActivity"
             android:screenOrientation="portrait" />
-        
+
         <!-- core -->
         <provider
             android:name="com.tws.plugin.manager.PluginManagerProvider"
@@ -167,11 +169,13 @@
             </intent-filter>
         </receiver>
 
-        <!--所有的插件中共有多少个Service, 这里就至少需要注册多少个对应的虚拟Service(也可以大于，实际上这里的数量只需>=可能同
+        <!--
+            所有的插件中共有多少个Service, 这里就至少需要注册多少个对应的虚拟Service(也可以大于，实际上这里的数量只需>=可能同
 			时处于运行状态的service数量，一般预注册十来个应该绰绰有余了)，
 			这里的虚拟Service并不需要真实存在，
 			只是占个位置，运行实动态绑定到实际的插件Service
-			对service的类全名没有要求，可随意指定，框架中是通过action来查询。-->
+			对service的类全名没有要求，可随意指定，框架中是通过action来查询。
+        -->
         <service android:name=".stub.PluginStubService1" >
             <intent-filter>
                 <action android:name="com.tencent.tws.pluginhost.STUB_DEFAULT" />
