--- a/TwsPluginHost/project.properties
+++ b/TwsPluginHost/project.properties
@@ -13,3 +13,4 @@
 # Project target.
 target=android-22
 android.library.reference.1=..\\TwsPluginShareLib
+android.library.reference.2=../TwsPluginCore
