--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':TwsPluginHost', ':TwsPluginCore', ':TwsPluginShareLib'
+include ':TwsPluginHost', ':TwsPluginCore', ':TwsPluginShareLib', ':TwsPluginDemo'
